# OutlierGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README
datasets/block-world/: README  data_01.g2o  data_02.g2o  data_03.g2o  data_04.g2o  data_05.g2o  data_06.g2o  data_07.g2o  data_08.g2o  data_09.g2o  data_10.g2o
datasets/intel/: README
datasets/manhattan/: README
datasets/parking-garage/: README
datasets/ringCity/: README
datasets/sphere2500/: data.g2o  groundtruth.g2o
generator_scripts/: generate_loops_olson_and_agarwal.py  generate_loops_suenderhauf.py  generate_multimodal_hyper_pfingsthorn_and_birk.py  generate_multimodal_loops_olson_and_agarwal.py  generate_multimodal_pfingsthorn_and_birk.py  generate_multimodal_sequential.py
scripts/: compute_error.py  convert_many.py  convert_to_all_plain_edges.py  convert_to_hyper_maxmixture.py  convert_to_hypermog.py  convert_to_old_hypermog.py  convert_to_separate_maxmixture.py  convert_to_switchable.py  graph.py  pose_utils.py  run_g2o.py  sanitize_graph.py  set_poses_to_zero.py  transformations.py  transplant_poses.py  utils.py
src/: outlier_generator.cpp
